# ImageFlow

./: .gitignore  README.md  meson.build  tech.digiroad.ImageFlow.json  update_l10n.sh
data/: meson.build  tech.digiroad.ImageFlow.desktop.in  tech.digiroad.ImageFlow.gschema.xml  tech.digiroad.ImageFlow.metainfo.xml.in  tech.digiroad.ImageFlow.service.in
data/icons/: meson.build
po/: POTFILES.in  imageflow.pot  it.po  meson.build  ru.po
src/: data.py  imageflow.gresource.xml  imageflow.in  main.py  meson.build  window.py
src/gtk/: help-overlay.ui  window.cmb  window.ui
